[package]
name = "dash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.1"
actix-web-actors = "4.2.0"
dotenv = "0.15.0"
tokio = { version = "1.35.1", features = ["full"] }
